# isitketo-django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-workers.yml  deploy.yml
core/: choices.py  forms.py  image_utils.py  models.py  tasks.py  urls.py  utils.py  views.py
core/api/: auth.py  schemas.py  views.py
core/management/commands/: generate_ai_image_for_product.py  import_foods.py
core/migrations/: 0001_initial.py  0002_alter_product_slug.py  0002_product_compressed_ai_generated_image_and_more.py  0003_alter_product_short_description.py  0003_product_brand.py  0004_blogpost.py  0004_remove_product_brand.py  0005_generatedkeywords.py  0006_add_product_macro_fields.py
core/old_content/foods/: 5-hour-energy-shots-extra-strength.md  5-hour-energy-shots.md  acesulfame-potassium.md  acorn-squash.md  almond-butter.md  almond-flour.md  almond-milk.md  almonds.md  apple-cider-vinegar-gummies.md  apple-cider-vinegar.md  apples.md  apricots.md  arugula.md  asparagus.md  aspartame.md  atkins-chocolate-banana-energy-shake.md  avocados.md  bacon.md  bai-flavored-water.md  bananas.md  bang-energy-drinks.md  beans.md  beets.md  (+308 more)
core/templatetags/: markdown_extras.py
deployment/: entrypoint.sh  prod-shell.sh
frontend/templates/: base.html
integrations/: fatsecret.py
is_it_keto/: asgi.py  settings.py  urls.py  wsgi.py
isitketo/: asgi.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
scripts/: generate_ai_images.sh
(+26 files in other folders)
